--- a/labexp1.bib
+++ b/labexp1.bib
@@ -1,4 +1,20 @@
 
+@misc{InformeAvance2013,
+author = {Gutiérrez Alfaro, Jaime},
+file = {::},
+title = {Informe de avance de actividad de investigación},
+url = {},
+year = {2013}
+}
+
+%%no tengo la última versión de este archivo. 
+@misc{Propuesta2013,
+author = {Gutiérrez Alfaro, Jaime},
+file = {::},
+title = {Propuesta: Laboratorio experimental de tecnologías computacionales de bajo nivel (Laboratorio expeimental)},
+url = {},
+year = {2013}
+}
 
 @article{GomezDiaz2014,
 author = {Gomez-Diaz, Teresa},
