Se agrega sección sobre el instrumento de evaluación a estudiantes
Esta sección de evaluación contempla:
    - Motivación para el intrumento.
    - Resultados obtenidos.

--- a/labexp1.tex
+++ b/labexp1.tex
@@ -228,6 +228,100 @@ trabajo, evaluación del trabajo y ajustes en la siguiente "iteración".
 % Note that IEEE typically puts floats only at the top, even when this
 % results in a large percentage of a column being occupied by floats.
 
+\section{Perspectiva del estudiante \textbf{[Cambiar este título]} }
+
+Para obtener la perspectiva del estudiante en lo concerniente al efecto de la
+participación en los proyectos de laboratorio, en su formación, en mayo de 2015
+se realizó una evaluación con propósito de este artículo se diseñó un
+instrumento enfocado en 4 áreas de interés: 
+
+\begin{itemize}
+    \item \textbf{Habilidades técnicas}: Nuevas herramientas, técnicas de
+        programación y estrategias de desarrollo.
+
+    \item \textbf{Expresión escrita:} Comunicación avances a la comunidad
+        técnica y no técnica interesada en los objetivos de los distintos
+        proyectos:
+
+    \item \textbf{Expresión oral:} Comunicación de resultados a la comunidad
+        técnica y no técnica interesada en los objetivos de los distintos
+        proyectos. 
+
+    \item \textbf{Idiomas:} Investigación de nuevos materiales e involucramiento
+        de comunidades de desarrolladores y usuarios que participan activamente
+        del uso de las herramientas envueltas en el proyecto.
+\end{itemize}
+
+
+\subsection*{Habilidades técnicas}
+
+Los estudiantes durante los dos años de proyectos estuvieron en contacto con las
+siguientes categorías de software:
+
+\begin{itemize}
+    \item \textbf{Debian\footnote{http://www.debian.org} GNU/Linux:}
+        Programación de \textit{scripts} en \textit{bash}, uso de la terminal y
+        administración del sistemas tipo Unix®.
+
+    \item \textbf{Herramientas de distribución de software:} Empaquetamiento de
+        herramientas de software libre para su uso en la distribución Debian.
+
+    \item \textbf{Software libre:} Ambientes de desarrollo, herramientas para
+        reconocimiento de texto y manejo de imágenes, así cómo bibliotecas de
+        apoyo a la programación.
+
+    \item \textbf{Desarrollo web y móvil:} Desarrollo de prototipos y
+        aplicaciones utilizando \textit{HTML}, \textit{CSS3},
+        \textit{javascript}, \textit{Android\footnote{http://www.android.com/}},
+        \textit{Open Street Maps\footnote{https://www.openstreetmap.org/}} para
+        su evaluación y uso por usuarios.
+
+    \item \textbf{Control de versiones:} Software para manejo de versiones
+        distribuido, su uso en comunidades de software libre y proyectos de
+        múltiples desarrolladores.
+
+    \item \textbf{Hardware libre:} Uso y aplicaciones de las placas de
+        prototipado Arduino\footnote{http://ardino.cc} y Raspberry
+        Pi\footnote{https://www.raspberrypi.org/}
+
+\end{itemize}
+
+\subsection*{ Divulgación de resultados}
+
+La presentación y seguimiento del avance de los proyectos, así cómo de sus
+resultados se realizó utilizando los siguientes mecanismos:
+
+\begin{itemize}
+    \item \textbf{Profesores participantes:} Profesores a cargo del grupo de
+        trabajo o en conocimiento del avance del proyecto.
+
+    \item \textbf{Profesores no participantes:} Profesores que imparten
+        lecciones en la carrera de ingeniería en computación, pero que no están
+        relacionados al proyecto.
+
+    \item \textbf{Estudiantes no participantes:} Estudiantes ajenos al proyecto
+        pero que cursan la misma carrera.
+
+    \item \textbf{Bitácoras de investigación:} Documentación del trabajo diario
+        y avances del proyecto mediante un registro individual de actividades,
+        completamente informal y a gusto del estudiante.
+
+    \item \textbf{Medios electrónicos:} Manuales técnicos, guías de uso, reporte
+        de errores, artículos no técnicos de carácter divulgativo en distintos
+        sitios especializados.
+
+    \item \textbf{Puestos informativos:} Participación en ferias vocaciones y de
+        proyección a la comunidad.
+\end{itemize}
+
+\subsection*{Idioma}
+
+En cuanto al manejo del idioma se mostró una tendencia baja al uso de otros
+idiomas, principalmente inglés, en la comunicación oral que sostuvieron los
+estudiantes con otros involucrados en el proyecto.  
+
+Lo opuesto ocurre en cuanto a la investigación necesaria para llevar a cabo el
+proyecto, la cual se desarrolla mayormente utilizando el idioma inglés.
 
 
 \section{Resultados}
